<resources>
    <string name="app_name">Hotelline</string>
    <string name="select">선택</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">이메일 주소</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_name">이름</string>
    <string name="hint_phone">전화번호</string>
    <string name="hint_type">회원 종류</string>
    <string name="usr">일반</string>
    <string name="air">항공사</string>
    <string name="hotel">호텔</string>
    <string name="btn_sign_up">가입</string>
    <string name="btn_login">로그인</string>
    <string name="btn_link_sign_up">회원 가입</string>
    <string name="btn_link_login">이미 회원입니다</string>
    <string name="btn_register">등록</string>
    <string name="btn_search">검색</string>
    <string name="hotel_ins">호텔 추가</string>
    <string name="hotel_info">호텔 정보</string>
    <string name="room_ins">방 추가</string>
    <string name="air_ins">항공사 추가</string>
    <string name="air_info">항공사 정보</string>
    <string name="flight_ins">항공편 추가</string>
    <string name="hint_hotel_name">호텔 이름</string>
    <string name="hint_hotel_local">지역</string>
    <string name="hint_limit_cnt">정원</string>
    <string name="hint_head_cnt">인원</string>
    <string name="hint_check_in">체크 인</string>
    <string name="hint_check_out">체크 아웃</string>
    <string name="hint_room_name">방 이름</string>
    <string name="hint_dept">출발지</string>
    <string name="hint_dest">목적지</string>
    <string name="hint_dept_date">출발일</string>
    <string name="hint_airline_name">항공사 이름</string>
    <string name="hint_airline_code">항공사 코드</string>
    <string name="hint_dept_time">출발 시각</string>
    <string name="hint_fly_time">비행 시간</string>
    <string name="hint_value">가격</string>
</resources>
